--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -1,2 +1,14 @@
 test_size: 0.2
 random_state: 3
+
+kedro_mlflow:
+  metrics: ["metrics"]
+  params: ["test_size"]
+  artifacts: ["master_table"]
+  tags:
+    demo_version: 1.0
+    model_type: "regressor"
+  models:
+    regressor:
+      name: regressor
+      input: X_train
